# coder

./: .env.local.example  .gitignore  AGENT.MD  Cargo.toml  README.md
apps/api/: Cargo.toml  README.md
apps/api/src/: main.rs
apps/auth/: Cargo.toml  README.md
apps/auth/src/: main.rs
apps/llmserver/: README.md  package.json  tsconfig.json
apps/llmserver/src/: auth.ts  catalog.ts  config.ts  downloader.ts  index.mjs  metrics.ts  modelManager.ts  server.ts  tokenTracker.ts
apps/studio-ui/: .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/studio-ui/src/: App.test.tsx  App.tsx  main.tsx
apps/studio-ui/src/api/: rpc.ts
apps/studio-ui/src/components/: AdminPanel.tsx  AgentChat.tsx  EditorView.tsx  ExecutionView.tsx  LLMPlayground.tsx  Sidebar.tsx  TerminalView.tsx  TopBar.tsx
apps/studio-ui/src/hooks/: useStudioContext.tsx
apps/studio-ui/src/styles/: tailwind.css
apps/studio-ui/src/themes/: NeonCyberNight.css  SerialSteel.css
database/: init.sql
database/migrations/: 0001_init.sql  001_init.sql  002_pgml.sql  003_projects.sql
docker/: Dockerfile.api  Dockerfile.auth  Dockerfile.llm  Dockerfile.ui  docker-compose.yml  nginx.conf
docs/: API.md  DEPLOYMENT.md  FILES_OVERVIEW.md  Projektplan.md  QUICK_START.md  SUPABASE_POSTGRES_SETUP.md  acceptance.md
examples/rpc/: agent.dispatch.json  fs.write.json  fs_write.json  llm.chat.json  llm_chat.json  project.create.json  run.exec.json  run_exec.json
metrics/: otel-config.yaml  prometheus.yml
sandbox/: Cargo.toml
sandbox/src/: agent_dispatcher.rs  errors.rs  fs.rs  lib.rs  micro.rs  path.rs  run.rs  wasm.rs
sandbox/tests/: fs_tests.rs  micro_tests.rs  run_tests.rs  wasm_tests.rs
schemas/rpc/: agent.cancel.json  agent.dispatch.json  agent.history.json  agent.list.json  agent.status.json  fs.delete.json  fs.list.json  fs.mkdir.json  fs.read.json  fs.write.json  llm.chat.json  llm.completions.json  llm.download.json  llm.embed.json  llm.list_models.json  llm.start.json  llm.status.json  llm.stop.json  micro.describe.json  micro.execute.json  micro.start.json  micro.stop.json  project.create.json  project.delete.json  project.file.delete.json  project.file.read.json  project.file.save.json  project.list.json  project.open.json  run.describe.json  run.exec.json  wasm.describe.json  wasm.invoke.json
src/lib/: supabaseClient.js
tests/: Cargo.toml  e2e.rs  fs_write.rs  run_exec.rs
tests/src/: support.rs
themes/: NeonCyberNight.css  SerialSteel.css
