[workspace]
members = [
    "apps/api",
    "apps/auth",
    "sandbox"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "ws"] }
bcrypt = "0.15"
bytes = "1.6"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
jsonwebtoken = "9.2"
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
sha2 = "0.10"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["sync"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
validator = "0.16"
