[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio-util = { workspace = true }
base64 = "0.22"
wasmer = { version = "4.2", features = ["compiler"] }

[dev-dependencies]
tempfile = "3.10"
wat = "1.0"
