[package]
name = "cyberdev_api"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
cyberdev_sandbox = { path = "../../sandbox" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
